# hermes-browser-workspace

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  PHASE0_CODEX_PROMPT.md  PHASE1_CODEX_PROMPT.md  PHASE2_CODEX_PROMPT.md  PHASE3_CODEX_PROMPT.md  README.md  SECURITY.md  plugin.yaml  pyproject.toml
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md  BUNDLE_TRUST_AND_REVIEW.md  COMMUNITY_ECOSYSTEM.md  COMPATIBILITY_MATRIX.md  DOMAIN_SKILL_CONTRIBUTING.md  DOMAIN_SKILL_FORMAT.md  PHASE0_CHECKPOINT.md  PHASE1_CHECKPOINT.md  PHASE2_CHECKPOINT.md  PHASE3_CHECKPOINT.md  PHASE4_CHECKPOINT.md  PHASE5_CHECKPOINT.md  PLUGIN_INSTALLATION_MODEL.md  PUBLIC_REPO_READINESS.md  ROADMAP.md  SECURITY_MODEL.md  TECH_SPEC.md  TRACK3_INSTALL_UPDATE_VERIFICATION.md  TRACK4_DOGFOOD_HELPER_DOMAIN_SKILL.md  TRACK5_COMMUNITY_SKILL_CONTRIBUTION_PILOT.md  TRACK6_ALPHA_RELEASE.md  TRACK7_UPSTREAM_PR_CANDIDATE.md  UPSTREAM_HERMES_PR_CANDIDATES.md
hermes_browser_workspace/: __init__.py  artifacts.py  capture.py  cdp.py  config.py  doctor.py  domain_skills.py  helpers.py  plugin.py  provenance.py  safety.py  tools.py  validation.py  workspace.py
hermes_browser_workspace/resources/skills/browser-workspace/: SKILL.md
scripts/: track4_dogfood_workflow.py  track5_community_contribution_pilot.py
skills/browser-workspace/: SKILL.md
templates/: agent_helpers.py
templates/community-domain-skill/: PR_SUMMARY.md  README.md  REVIEW_CHECKLIST.md  SKILL.md  metadata.json  recipes.json  selectors.json
templates/community-domain-skill/examples/: README.md  synthetic-example.json
tests/: test_artifacts.py  test_config.py  test_domain_skills.py  test_helpers.py  test_phase2_domain_skills.py  test_plugin.py  test_safety.py  test_track5_community.py  test_workspace.py
