[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hermes-browser-workspace"
version = "0.1.0"
description = "Local Hermes browser workspace plugin with safer adaptation workflows"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
  {name = "Hermes Browser Workspace Contributors"}
]
dependencies = []

[project.entry-points."hermes_agent.plugins"]
hermes_browser_workspace = "hermes_browser_workspace.plugin:get_plugin"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["hermes_browser_workspace*"]

[tool.setuptools.package-data]
hermes_browser_workspace = ["../templates/agent_helpers.py", "../skills/browser-workspace/SKILL.md"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
